Django_project_2 files

--- a/blog/templates/blog/bioinformatics.html
+++ b/blog/templates/blog/bioinformatics.html
@@ -1,4 +1,9 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h2>Bioinformatics scripts</h2>
+<body>
+    <h1>
+    <script src="scripts/main.js"></script>
+    </h1>
+
+</body>
 {% endblock content %}
